# python-package-gitlab

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md
src/myapp/: __init__.py  __main__.py
tests/: test_add.py
